[tool.poetry]
name = "langchain-v1-hedera-agent-kit-examples"
version = "3.0.0"
description = "Example applications using hedera-agent-kit-py with langchain v1"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
hedera_agent_kit = { path = "../..", develop = true }
langchain = "==1.2.10"
langchain-openai = "==1.1.10"
langchain-anthropic = "==1.3.4"
langchain-groq = "==1.1.2"
python-dotenv = "1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
